--- a/omdsProect.ipynb
+++ b/omdsProect.ipynb
@@ -12685,7 +12685,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "id": "pVr8xutkYIIa",
         "colab": {
@@ -12722,7 +12722,7 @@
       "metadata": {
         "id": "AAGkp70_w7OE"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -12738,7 +12738,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 130,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -12762,7 +12762,7 @@
       "metadata": {
         "id": "uUDHlQdCbs0o"
       },
-      "execution_count": 82,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -12799,7 +12799,7 @@
       "metadata": {
         "id": "Tv-lzmtbFykI"
       },
-      "execution_count": 183,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -12881,7 +12881,7 @@
       "metadata": {
         "id": "N98TRVdCKw9S"
       },
-      "execution_count": 165,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -12979,7 +12979,7 @@
       "metadata": {
         "id": "BwYBOFDT8x7O"
       },
-      "execution_count": 166,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -13028,7 +13028,7 @@
       "metadata": {
         "id": "Ktd-rJXvWiJY"
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -14067,72 +14067,23 @@
         "model = MLP([16, 8, 8, 1], 1)\n",
         "\n",
         "X_train_val_scaled = scaler.fit_transform(X_train_val)\n",
-        "initial_train_error = model.error(X_train_val_scaled, y_train_val)\n",
+        "print(f'Initial train error\\t{model.error(X_train_val_scaled, y_train_val)}')\n",
+        "print(f'Initial train accuracy\\t{model.accuracy(X_train_val_scaled, y_train_val)}')\n",
+        "\n",
         "message = model.fit(X_train_val_scaled, y_train_val)\n",
-        "final_train_error = model.error(X_train_val_scaled, y_train_val)\n",
+        "print(f'Final train error\\t{model.error(X_train_val_scaled, y_train_val)}')\n",
+        "print(f'Final train accuracy\\t{model.accuracy(X_train_val_scaled, y_train_val)}')\n",
         "\n",
         "X_test_scaled = scaler.transform(X_test)\n",
-        "final_test_error = model.error(X_test_scaled, y_test)"
+        "print(f'Final test error\\t{model.error(X_test_scaled, y_test)}')\n",
+        "print(f'Final test accuracy\\t{model.accuracy(X_test_scaled, y_test)}')\n",
+        "print(message)"
       ],
       "metadata": {
         "id": "ivYDEXZlYyPc"
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "print(f'Initial train error\\t{initial_train_error}')\n",
-        "print(f'Final train error\\t{final_train_error}')\n",
-        "print(f'Final test error\\t{final_test_error}')\n",
-        "print(message)"
-      ],
-      "metadata": {
-        "id": "V9gOfFMXZb8c",
-        "outputId": "22cf5f1c-fce8-4e50-9621-c08c0f4d3185",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
-      },
-      "execution_count": 21,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Initial train error\t0.5205173118555212\n",
-            "Final train error\t0.003334068412160213\n",
-            "Final test error\t0.01841965679809931\n",
-            "          message: `gtol` termination condition is satisfied.\n",
-            "          success: True\n",
-            "           status: 1\n",
-            "              fun: 0.003334068412160213\n",
-            "                x: [ 1.205e-01  9.107e-02 ...  1.278e+00  1.278e+00]\n",
-            "              nit: 388\n",
-            "             nfev: 388\n",
-            "             njev: 388\n",
-            "             nhev: 0\n",
-            "         cg_niter: 3894\n",
-            "     cg_stop_cond: 4\n",
-            "             grad: [-1.590e-09  2.160e-09 ... -1.033e-09  1.077e-09]\n",
-            "  lagrangian_grad: [-1.590e-09  2.160e-09 ... -1.033e-09  1.077e-09]\n",
-            "           constr: []\n",
-            "              jac: []\n",
-            "      constr_nfev: []\n",
-            "      constr_njev: []\n",
-            "      constr_nhev: []\n",
-            "                v: []\n",
-            "           method: equality_constrained_sqp\n",
-            "       optimality: 7.920162248139612e-09\n",
-            " constr_violation: 0\n",
-            "   execution_time: 7.954650402069092\n",
-            "        tr_radius: 6.257992973650322\n",
-            "   constr_penalty: 1.0\n",
-            "            niter: 388\n"
-          ]
-        }
-      ]
     },
     {
       "cell_type": "markdown",
@@ -14224,7 +14175,7 @@
       "metadata": {
         "id": "wOexZZQD0XBj"
       },
-      "execution_count": 186,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -14272,9 +14223,11 @@
         "\n",
         "    def grad_c(self, X, y):\n",
         "        p = self.predict(X)\n",
-        "        grad = cross_entropy.grad(y, p)[:, None] * self.w[None, :]\n",
-        "        grad *= self.RBF.derivative(self.norm)\n",
-        "        grad = grad[:, :, None] * self.dist / self.norm[:, :, None]\n",
+        "        grad = self.dist / self.norm[:, :, None]\n",
+        "        grad *= self.RBF.derivative(self.norm)[:, :, None]\n",
+        "        grad *= self.w[None, :, None]\n",
+        "        grad *= self.sigmoid.grad(p)[:, None, None]\n",
+        "        grad *= cross_entropy.grad(y, p)[:, None, None]\n",
         "        return grad.sum(axis=0)\n",
         "\n",
         "\n",
@@ -14321,7 +14274,7 @@
       "metadata": {
         "id": "pJC-iVWTm8T7"
       },
-      "execution_count": 187,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -14342,7 +14295,7 @@
       "metadata": {
         "id": "TKHBN3tYtYXF"
       },
-      "execution_count": 133,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -14571,7 +14524,7 @@
         "id": "isnwEzALt3Kt",
         "outputId": "843d0433-c685-47b6-9de9-531ed84cce06"
       },
-      "execution_count": 137,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -14843,7 +14796,7 @@
           "height": 423
         }
       },
-      "execution_count": 161,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -15208,7 +15161,7 @@
       "metadata": {
         "id": "7jH8-5GDwVsx"
       },
-      "execution_count": 139,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -15224,7 +15177,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 140,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -15259,12 +15212,16 @@
         "model = RBF_network(12, 'Multiquadric', 10)\n",
         "\n",
         "X_train_val_scaled = scaler.fit_transform(X_train_val)\n",
-        "initial_train_error = model.error(X_train_val_scaled, y_train_val)\n",
+        "print(f'Initial train error\\t{model.error(X_train_val_scaled, y_train_val)}')\n",
+        "print(f'Initial train accuracy\\t{model.accuracy(X_train_val_scaled, y_train_val)}')\n",
+        "\n",
         "model.fit(X_train_val_scaled, y_train_val)\n",
-        "final_train_error = model.error(X_train_val_scaled, y_train_val)\n",
+        "print(f'Final train error\\t{model.error(X_train_val_scaled, y_train_val)}')\n",
+        "print(f'Final train accuracy\\t{model.accuracy(X_train_val_scaled, y_train_val)}')\n",
         "\n",
         "X_test_scaled = scaler.transform(X_test)\n",
-        "final_test_error = model.error(X_test_scaled, y_test)"
+        "print(f'Final test error\\t{model.error(X_test_scaled, y_test)}')\n",
+        "print(f'Final test accuracy\\t{model.accuracy(X_test_scaled, y_test)}')"
       ],
       "metadata": {
         "id": "5XoTk9mRWjph",
@@ -15273,7 +15230,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 210,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -15293,33 +15250,6 @@
             "  return 1 / (1 + np.exp(-x)) # dtype=np.float128 to prevent rounding up to 0 or 1\n",
             "<ipython-input-183-4f1ca370f408>:3: RuntimeWarning: underflow encountered in divide\n",
             "  return 1 / (1 + np.exp(-x)) # dtype=np.float128 to prevent rounding up to 0 or 1\n"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "print(f'Initial train error\\t{initial_train_error}')\n",
-        "print(f'Final train error\\t{final_train_error}')\n",
-        "print(f'Final test error\\t{final_test_error}')"
-      ],
-      "metadata": {
-        "id": "thSlK9anWnLy",
-        "outputId": "bd4c4c50-69eb-4a93-ee86-5a5c1a1bcee0",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
-      },
-      "execution_count": 211,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Initial train error\t14.16520561250722\n",
-            "Final train error\t0.09386596665854006\n",
-            "Final test error\t0.08697723017160662\n"
           ]
         }
       ]
