added RBF accuracy

--- a/omdsProect.ipynb
+++ b/omdsProect.ipynb
@@ -12685,13 +12685,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
         "id": "pVr8xutkYIIa",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "7f886ea9-a526-46b3-92fe-52a9eead6375"
+        "outputId": "b45a15eb-d4b6-4b4d-b8b4-0354c24c563c"
       },
       "outputs": [
         {
@@ -12722,7 +12722,7 @@
       "metadata": {
         "id": "AAGkp70_w7OE"
       },
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": []
     },
     {
@@ -12762,44 +12762,19 @@
       "metadata": {
         "id": "uUDHlQdCbs0o"
       },
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "class Sigmoid:\n",
-        "    def __call__(self, x):\n",
-        "        return 1 / (1 + np.exp(-x)) # dtype=np.float128 to prevent rounding up to 0 or 1\n",
-        "\n",
-        "    def grad(self, s_x):\n",
-        "        return s_x * (1 - s_x)\n",
-        "\n",
-        "\n",
-        "class Tanh:\n",
-        "    def __init__(self, sigma):\n",
-        "        self.sigma = sigma\n",
-        "\n",
-        "    def __call__(self, x):\n",
-        "        return np.tanh(self.sigma * x)\n",
-        "\n",
-        "    def grad(self, th_x):\n",
-        "        return self.sigma * (1 - th_x ** 2)\n",
-        "\n",
-        "\n",
-        "class CrossEntropy:\n",
-        "    def __call__(self, y, p):\n",
-        "        return - (y * np.log(p) + (1-y) * np.log(1-p)).mean()\n",
-        "\n",
-        "    def grad(self, y, p):\n",
-        "        return - (y / p - (1-y) / (1-p)) / y.shape[0]\n",
-        "\n",
-        "cross_entropy = CrossEntropy()\n"
+        "np.random.seed(42)\n",
+        "X_train_val, X_test, y_train_val, y_test = train_test_split(X, y, test_size=0.2)"
       ],
       "metadata": {
-        "id": "Tv-lzmtbFykI"
+        "id": "Ktd-rJXvWiJY"
       },
-      "execution_count": null,
+      "execution_count": 4,
       "outputs": []
     },
     {
@@ -12809,6 +12784,15 @@
       ],
       "metadata": {
         "id": "NSZ4NIOn1CSm"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Description"
+      ],
+      "metadata": {
+        "id": "7a-c0JDN69o-"
       }
     },
     {
@@ -12855,6 +12839,43 @@
     {
       "cell_type": "code",
       "source": [
+        "class Sigmoid:\n",
+        "    def __call__(self, x):\n",
+        "        return 1 / (1 + np.exp(-x)) # dtype=np.float128 to prevent rounding up to 0 or 1\n",
+        "\n",
+        "    def grad(self, s_x):\n",
+        "        return s_x * (1 - s_x)\n",
+        "\n",
+        "\n",
+        "class Tanh:\n",
+        "    def __init__(self, sigma):\n",
+        "        self.sigma = sigma\n",
+        "\n",
+        "    def __call__(self, x):\n",
+        "        return np.tanh(self.sigma * x)\n",
+        "\n",
+        "    def grad(self, th_x):\n",
+        "        return self.sigma * (1 - th_x ** 2)\n",
+        "\n",
+        "\n",
+        "class CrossEntropy:\n",
+        "    def __call__(self, y, p):\n",
+        "        return - (y * np.log(p) + (1-y) * np.log(1-p)).mean()\n",
+        "\n",
+        "    def grad(self, y, p):\n",
+        "        return - (y / p - (1-y) / (1-p)) / y.shape[0]\n",
+        "\n",
+        "cross_entropy = CrossEntropy()\n"
+      ],
+      "metadata": {
+        "id": "Tv-lzmtbFykI"
+      },
+      "execution_count": 5,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "class MLPLayer():\n",
         "    def __init__(self, input_size, output_size, activation):\n",
         "        self.w = np.random.random((output_size, input_size))\n",
@@ -12881,7 +12902,7 @@
       "metadata": {
         "id": "N98TRVdCKw9S"
       },
-      "execution_count": null,
+      "execution_count": 6,
       "outputs": []
     },
     {
@@ -12979,7 +13000,7 @@
       "metadata": {
         "id": "BwYBOFDT8x7O"
       },
-      "execution_count": null,
+      "execution_count": 7,
       "outputs": []
     },
     {
@@ -13018,18 +13039,6 @@
       "metadata": {
         "id": "nQMn-cLSWieB"
       }
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "np.random.seed(42)\n",
-        "X_train_val, X_test, y_train_val, y_test = train_test_split(X, y, test_size=0.2)"
-      ],
-      "metadata": {
-        "id": "Ktd-rJXvWiJY"
-      },
-      "execution_count": null,
-      "outputs": []
     },
     {
       "cell_type": "code",
@@ -14088,23 +14097,19 @@
     {
       "cell_type": "markdown",
       "source": [
-        "## Resuts\n",
-        "\n",
-        "|N layers|N_neurons|$\\sigma$|$\\rho$|Final train error|Final test error|\n",
-        "|-|-|-|-|-|-|\n",
-        "|2|8|1|$10^{-4}$|"
+        "# Radial Basis Function (RBF) Network"
       ],
       "metadata": {
-        "id": "L_sddClAa8en"
+        "id": "rGW3ywZzDNQ5"
       }
     },
     {
       "cell_type": "markdown",
       "source": [
-        "# Radial Basis Function (RBF) Network"
+        "## Description"
       ],
       "metadata": {
-        "id": "rGW3ywZzDNQ5"
+        "id": "nHPwlzyw7GeR"
       }
     },
     {
@@ -14175,7 +14180,7 @@
       "metadata": {
         "id": "wOexZZQD0XBj"
       },
-      "execution_count": null,
+      "execution_count": 8,
       "outputs": []
     },
     {
@@ -14269,12 +14274,18 @@
         "            xi2 *= 0.5\n",
         "\n",
         "            grad_square = (self.grad_w(X, y)**2).sum() + (self.grad_c(X, y)**2).sum()\n",
-        "            it += 1\n"
+        "            it += 1\n",
+        "\n",
+        "\n",
+        "    def accuracy(self, X, y, threshold=0.5):\n",
+        "        y = y.reshape([-1, 1])\n",
+        "        p = self.predict(X)\n",
+        "        return ((p > threshold) == y).mean()\n"
       ],
       "metadata": {
         "id": "pJC-iVWTm8T7"
       },
-      "execution_count": null,
+      "execution_count": 11,
       "outputs": []
     },
     {
@@ -15225,31 +15236,45 @@
       ],
       "metadata": {
         "id": "5XoTk9mRWjph",
-        "outputId": "a65e5fc1-70fb-4fa3-ca22-b55506335743",
+        "outputId": "9235cbb1-467a-435f-d1dc-c8e75c6da5e5",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": null,
+      "execution_count": 13,
       "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Initial train error\tnan\n",
+            "Initial train accuracy\t0.4899919935948759\n",
+            "Final train error\tnan\n",
+            "Final train accuracy\t0.4899919935948759\n",
+            "Final test error\tnan\n",
+            "Final test accuracy\t0.5143769968051118\n"
+          ]
+        },
         {
           "output_type": "stream",
           "name": "stderr",
           "text": [
-            "<ipython-input-183-4f1ca370f408>:22: RuntimeWarning: divide by zero encountered in log\n",
+            "<ipython-input-5-4f1ca370f408>:22: RuntimeWarning: divide by zero encountered in log\n",
             "  return - (y * np.log(p) + (1-y) * np.log(1-p)).mean()\n",
-            "<ipython-input-183-4f1ca370f408>:22: RuntimeWarning: invalid value encountered in multiply\n",
+            "<ipython-input-5-4f1ca370f408>:22: RuntimeWarning: invalid value encountered in multiply\n",
             "  return - (y * np.log(p) + (1-y) * np.log(1-p)).mean()\n",
-            "<ipython-input-183-4f1ca370f408>:25: RuntimeWarning: divide by zero encountered in divide\n",
+            "<ipython-input-5-4f1ca370f408>:25: RuntimeWarning: divide by zero encountered in divide\n",
             "  return - (y / p - (1-y) / (1-p)) / y.shape[0]\n",
-            "<ipython-input-183-4f1ca370f408>:25: RuntimeWarning: invalid value encountered in divide\n",
+            "<ipython-input-5-4f1ca370f408>:25: RuntimeWarning: invalid value encountered in divide\n",
             "  return - (y / p - (1-y) / (1-p)) / y.shape[0]\n",
-            "<ipython-input-187-c20468be6aa0>:36: RuntimeWarning: invalid value encountered in multiply\n",
+            "<ipython-input-11-b7c9c822c786>:36: RuntimeWarning: invalid value encountered in multiply\n",
             "  grad *= self.sigmoid.grad(p)\n",
-            "<ipython-input-183-4f1ca370f408>:3: RuntimeWarning: overflow encountered in exp\n",
-            "  return 1 / (1 + np.exp(-x)) # dtype=np.float128 to prevent rounding up to 0 or 1\n",
-            "<ipython-input-183-4f1ca370f408>:3: RuntimeWarning: underflow encountered in divide\n",
-            "  return 1 / (1 + np.exp(-x)) # dtype=np.float128 to prevent rounding up to 0 or 1\n"
+            "<ipython-input-11-b7c9c822c786>:47: RuntimeWarning: invalid value encountered in multiply\n",
+            "  grad *= cross_entropy.grad(y, p)[:, None, None]\n",
+            "<ipython-input-5-4f1ca370f408>:22: RuntimeWarning: divide by zero encountered in log\n",
+            "  return - (y * np.log(p) + (1-y) * np.log(1-p)).mean()\n",
+            "<ipython-input-5-4f1ca370f408>:22: RuntimeWarning: invalid value encountered in multiply\n",
+            "  return - (y * np.log(p) + (1-y) * np.log(1-p)).mean()\n"
           ]
         }
       ]
